# ComfyUI-find-models

./: README.md  __init__.py  google_search.py  name_matcher.py  pyproject.toml  requirements.txt  server.py  test_name_matching.py  安装说明.md  项目说明.md
doc/: node-installation-and-restart.md  node-search-request.md  version-management.md
web/: find_models.js  workflowModelExtractor.js
web/components/: Dialog.js  DownloadLinks.js  LinkFilter.js  LoadingState.js  LocalPath.js  ModelPageLinks.js  ModelRow.js  RefreshButton.js  Spinner.js  StatsCards.js  TableHeader.js
web/i18n/: i18n.js  locales.js
web/utils/: api.js  cache.js  helpers.js  modelOperations.js  nodeHighlight.js  search.js  ui.js  workflowAnalysis.js
