[project]
name = "comfyui-find-models"
description = "This tool detects the models required by your workflow in the ComfyUI interface and provides similar download results from civitai.com/models and huggingface.co, or Google search results (Manual open new window tab)"
version = "1.1.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/yobrave/ComfyUI-find-models"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "yobrave"
DisplayName = "ComfyUI Find Models"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility